# LJ

./: .gitignore  CMakeLists.txt  big.xyz  cluster.f90  dimer.xyz  lj_source  main.F90  pot_LJ.f90  read_conf.f90
